# power-grid-clearing

./: .gitignore  LICENSE  README.md  demo.ipynb  formulation.tex  main.py  problem-description-formulation.tex  pyproject.toml
code/ftr_clearance/: README.md  generate_bids.py  solution.csv
da-clearance-lp/: congestion-example.ipynb  da_clearance_formulation-118bus.ipynb  da_clearance_formulation-24bus.ipynb  da_clearance_formulation-300bus.ipynb  da_clearance_formulation-30bus.ipynb  da_clearance_formulation-39bus.ipynb  da_clearance_formulation-57bus.ipynb
da-clearance-lp/old/: da_clearance_formulation.ipynb
formulation/: problem-description-formulation-saadedits.tex  problem-specification-formulation.tex
formulation-automation/: aux_file.aux  example-contingencies.aux  power-world-contingency.ipynb  pyproject.toml
formulation/old/: initial-formulation.tex
ftr_clearance/: 118-bus-ftr-clearance.ipynb  24-bus-ftr-clearance.ipynb  30-bus-ftr-clearance.ipynb  300-bus-ftr-clearance.ipynb  39-bus-ftr-clearance.ipynb  57-bus-ftr-clearance.ipynb  README.md  bid_generation.ipynb  bids.csv  ftr_clearance.py
gurobi-formulation/: DA_Clearance.lp  da_clearance_formulation-118bus.ipynb  da_clearance_formulation-57bus.ipynb  da_clearance_formulation-tim.ipynb  da_clearance_formulation.ipynb  solutions.csv
raw-data/: branches.csv  buses.csv  generators.csv  gens.csv  ptdf.csv  sf-contingencies.csv
raw-data/larger-model-processed/: README.md
writeup/: presentation.tex  problem-specification-formulation (fixed_by_Buck).tex  writeup.fdb_latexmk  writeup.fls  writeup.tex
(+64 files in other folders)
