[project]
name = "co370-smbt-grid-scheduling"
version = "0.1.0"
description = "Code for CO370 Final Project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gurobipy>=13.0.1",
    "jupyter>=1.1.1",
    "notebook>=7.5.5",
    "numpy>=2.4.4",
    "pandas[performance, plot, output-formatting, computation]>=3.0.2",
]
